Phase 1/src/parsers/UTLParser.java
// Generated from C:/Users/asus/Desktop/Compiler CA P1/src/main/grammar/UTL.g4 by ANTLR 4.13.1
package parsers;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class UTLParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		FLOAT_VAL=1, INT_VAL=2, BOOLEAN_VAL=3, NON_ZERO_INT_VAL=4, ZERO=5, INT=6, 
		STRING=7, FOR=8, WHILE=9, ELSE=10, IF=11, CONTINUE=12, TRY=13, FALSE=14, 
		TRUE=15, FLOAT=16, BOOL=17, ON_INIT=18, ON_START=19, THROW=20, RETURN=21, 
		CATCH=22, BREAK=23, STATIC=24, SHARED=25, VOID=26, SCHEDULE=27, DOUBLE=28, 
		MAIN=29, DIGITS=30, BUY=31, SELL=32, BID=33, ASK=34, TYPE=35, VOLUME=36, 
		LOW=37, HIGH=38, CLOSE=39, OPEN=40, TIME=41, TEXT=42, TRADE=43, ORDER=44, 
		CANDLE=45, EXCEPTION=46, REFRESH_RATE=47, GET_CANDLE=48, TERMINATE=49, 
		CONNECT=50, OBSERVE=51, PRINT=52, PRE_ORDER=53, PARALLEL=54, EQUALS=55, 
		NOT_EQUALS=56, LESS_THAN=57, GREATER_THAN=58, AND=59, OR=60, NOT=61, BITWISE_NOT=62, 
		BITWISE_RIGHT_SHIFT=63, BITWISE_LEFT_SHIFT=64, BITWISE_AND=65, BITWISE_OR=66, 
		BITWISE_XOR=67, ASSIGN=68, ADD_ASSIGN=69, SUBTRACT_ASSIGN=70, MULTIPLY_ASSIGN=71, 
		DIVIDE_ASSIGN=72, MODULO_ASSIGN=73, INCREMENT=74, DECREMENT=75, PLUS=76, 
		MINUS=77, MULTIPLY=78, DIVIDE=79, MODULO=80, LPAR=81, RPAR=82, LBRACKET=83, 
		RBRACKET=84, LBRACE=85, RBRACE=86, COMMA=87, DOT=88, SEMICOLON=89, IDENTIFIER=90, 
		STRING_VAL=91, WHITE_SPACE=92, NEW_LINE=93, LINE_COMMENT=94, BLOCK_COMMENT=95;
	public static final int
		RULE_program = 0, RULE_external_init_var = 1, RULE_main = 2, RULE_on_init_start_func = 3, 
		RULE_function = 4, RULE_function_args = 5, RULE_body = 6, RULE_body_general_ends = 7, 
		RULE_body_return = 8, RULE_body_general_blocks = 9, RULE_body_general_instructions = 10, 
		RULE_body_general_calls = 11, RULE_static_init_var = 12, RULE_if_else_block = 13, 
		RULE_if = 14, RULE_else = 15, RULE_while = 16, RULE_for = 17, RULE_try_catch_block = 18, 
		RULE_try = 19, RULE_try_catch = 20, RULE_body_scope = 21, RULE_print_call = 22, 
		RULE_function_call = 23, RULE_schedule_init = 24, RULE_trade_exp = 25, 
		RULE_schedule_rule = 26, RULE_trade_id = 27, RULE_experssion = 28, RULE_exp1 = 29, 
		RULE_exp1prim = 30, RULE_exp2 = 31, RULE_exp3 = 32, RULE_exp4 = 33, RULE_exp4prim = 34, 
		RULE_exp5 = 35, RULE_exp5prim = 36, RULE_exp6 = 37, RULE_exp6prim = 38, 
		RULE_exp7 = 39, RULE_exp7prim = 40, RULE_exp8 = 41, RULE_exp8prim = 42, 
		RULE_exp9 = 43, RULE_exp9prim = 44, RULE_exp10 = 45, RULE_exp11 = 46, 
		RULE_exp11prim = 47, RULE_exp12 = 48, RULE_exp13 = 49, RULE_exp14 = 50, 
		RULE_exp15 = 51, RULE_body_experssion = 52, RULE_class_member = 53, RULE_assign_var = 54, 
		RULE_assign_arr = 55, RULE_assign_experssion = 56, RULE_unary = 57, RULE_inc_dec_a = 58, 
		RULE_inc_dec_p = 59, RULE_init_var = 60, RULE_init_arr = 61, RULE_assign_init_experssion = 62, 
		RULE_arr_index = 63, RULE_assign_types = 64, RULE_throw_execption = 65, 
		RULE_execption_constructor = 66, RULE_assign_function = 67, RULE_function_names = 68, 
		RULE_types = 69, RULE_primitives = 70, RULE_utl_types = 71, RULE_arr_primitives = 72, 
		RULE_primitives_vals = 73, RULE_order_type = 74, RULE_class_attributes = 75, 
		RULE_trade_attributes = 76, RULE_candle_attributes = 77, RULE_execption_attributes = 78;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "external_init_var", "main", "on_init_start_func", "function", 
			"function_args", "body", "body_general_ends", "body_return", "body_general_blocks", 
			"body_general_instructions", "body_general_calls", "static_init_var", 
			"if_else_block", "if", "else", "while", "for", "try_catch_block", "try", 
			"try_catch", "body_scope", "print_call", "function_call", "schedule_init", 
			"trade_exp", "schedule_rule", "trade_id", "experssion", "exp1", "exp1prim", 
			"exp2", "exp3", "exp4", "exp4prim", "exp5", "exp5prim", "exp6", "exp6prim", 
			"exp7", "exp7prim", "exp8", "exp8prim", "exp9", "exp9prim", "exp10", 
			"exp11", "exp11prim", "exp12", "exp13", "exp14", "exp15", "body_experssion", 
			"class_member", "assign_var", "assign_arr", "assign_experssion", "unary", 
			"inc_dec_a", "inc_dec_p", "init_var", "init_arr", "assign_init_experssion", 
			"arr_index", "assign_types", "throw_execption", "execption_constructor", 
			"assign_function", "function_names", "types", "primitives", "utl_types", 
			"arr_primitives", "primitives_vals", "order_type", "class_attributes", 
			"trade_attributes", "candle_attributes", "execption_attributes"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, "'0'", "'int'", "'string'", "'for'", "'while'", 
			"'else'", "'if'", "'continue'", "'try'", "'false'", "'true'", "'float'", 
			"'bool'", "'OnInit'", "'OnStart'", "'throw'", "'return'", "'catch'", 
			"'break'", "'static'", "'shared'", "'void'", "'@schedule'", "'double'", 
			"'Main'", "'Digits'", "'BUY'", "'SELL'", "'Bid'", "'Ask'", "'Type'", 
			"'Volume'", "'Low'", "'High'", "'Close'", "'Open'", "'Time'", "'Text'", 
			"'Trade'", "'Order'", "'Candle'", "'Exception'", "'RefreshRate'", "'GetCandle'", 
			"'Terminate'", "'Connect'", "'Observe'", "'Print'", "'preorder'", "'parallel'", 
			"'=='", "'!='", "'<'", "'>'", "'&&'", "'||'", "'!'", "'~'", "'>>'", "'<<'", 
			"'&'", "'|'", "'^'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", "'++'", 
			"'--'", "'+'", "'-'", "'*'", "'/'", "'%'", "'('", "')'", "'['", "']'", 
			"'{'", "'}'", "','", "'.'", "';'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "FLOAT_VAL", "INT_VAL", "BOOLEAN_VAL", "NON_ZERO_INT_VAL", "ZERO", 
			"INT", "STRING", "FOR", "WHILE", "ELSE", "IF", "CONTINUE", "TRY", "FALSE", 
			"TRUE", "FLOAT", "BOOL", "ON_INIT", "ON_START", "THROW", "RETURN", "CATCH", 
			"BREAK", "STATIC", "SHARED", "VOID", "SCHEDULE", "DOUBLE", "MAIN", "DIGITS", 
			"BUY", "SELL", "BID", "ASK", "TYPE", "VOLUME", "LOW", "HIGH", "CLOSE", 
			"OPEN", "TIME", "TEXT", "TRADE", "ORDER", "CANDLE", "EXCEPTION", "REFRESH_RATE", 
			"GET_CANDLE", "TERMINATE", "CONNECT", "OBSERVE", "PRINT", "PRE_ORDER", 
			"PARALLEL", "EQUALS", "NOT_EQUALS", "LESS_THAN", "GREATER_THAN", "AND", 
			"OR", "NOT", "BITWISE_NOT", "BITWISE_RIGHT_SHIFT", "BITWISE_LEFT_SHIFT", 
			"BITWISE_AND", "BITWISE_OR", "BITWISE_XOR", "ASSIGN", "ADD_ASSIGN", "SUBTRACT_ASSIGN", 
			"MULTIPLY_ASSIGN", "DIVIDE_ASSIGN", "MODULO_ASSIGN", "INCREMENT", "DECREMENT", 
			"PLUS", "MINUS", "MULTIPLY", "DIVIDE", "MODULO", "LPAR", "RPAR", "LBRACKET", 
			"RBRACKET", "LBRACE", "RBRACE", "COMMA", "DOT", "SEMICOLON", "IDENTIFIER", 
			"STRING_VAL", "WHITE_SPACE", "NEW_LINE", "LINE_COMMENT", "BLOCK_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "UTL.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public UTLParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<On_init_start_funcContext> on_init_start_func() {
			return getRuleContexts(On_init_start_funcContext.class);
		}
		public On_init_start_funcContext on_init_start_func(int i) {
			return getRuleContext(On_init_start_funcContext.class,i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<External_init_varContext> external_init_var() {
			return getRuleContexts(External_init_varContext.class);
		}
		public External_init_varContext external_init_var(int i) {
			return getRuleContext(External_init_varContext.class,i);
		}
		public List<Static_init_varContext> static_init_var() {
			return getRuleContexts(Static_init_varContext.class);
		}
		public Static_init_varContext static_init_var(int i) {
			return getRuleContext(Static_init_varContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UTLVisitor ) return ((UTLVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(162);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,0,_ctx) ) {
					case 1:
						{
						setState(158);
						on_init_start_func();
						}
						break;
					case 2:
						{
						setState(159);
						function();
						}
						break;
					case 3:
						{
						setState(160);
						external_init_var();
						}
						break;
					case 4:
						{
						setState(161);
						static_init_var();
						}
						break;
					}
					} 
				}
				setState(166);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(167);
			main();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class External_init_varContext extends ParserRuleContext {
		public Init_varContext init_var() {
			return getRuleContext(Init_varContext.class,0);
		}
		public Init_arrContext init_arr() {
			return getRuleContext(Init_arrContext.class,0);
		}
		public TerminalNode SHARED() { return getToken(UTLParser.SHARED, 0); }
		public External_init_varContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_external_init_var; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).enterExternal_init_var(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).exitExternal_init_var(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UTLVisitor ) return ((UTLVisitor<? extends T>)visitor).visitExternal_init_var(this);
			else return visitor.visitChildren(this);
		}
	}

	public final External_init_varContext external_init_var() throws RecognitionException {
		External_init_varContext _localctx = new External_init_varContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_external_init_var);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SHARED) {
				{
				setState(169);
				match(SHARED);
				}
			}

			setState(174);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				{
				setState(172);
				init_var();
				}
				break;
			case 2:
				{
				setState(173);
				init_arr();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode MAIN() { return getToken(UTLParser.MAIN, 0); }
		public TerminalNode LPAR() { return getToken(UTLParser.LPAR, 0); }
		public TerminalNode RPAR() { return getToken(UTLParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(UTLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UTLParser.RBRACE, 0); }
		public PrimitivesContext primitives() {
			return getRuleContext(PrimitivesContext.class,0);
		}
		public TerminalNode VOID() { return getToken(UTLParser.VOID, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UTLVisitor ) return ((UTLVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case STRING:
			case FLOAT:
			case BOOL:
			case DOUBLE:
				{
				setState(176);
				primitives();
				}
				break;
			case VOID:
				{
				setState(177);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(180);
			match(MAIN);
			setState(181);
			match(LPAR);
			setState(182);
			match(RPAR);
			setState(183);
			match(LBRACE);
			setState(187);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8998403592895424L) != 0) || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 65539L) != 0)) {
				{
				{
				setState(184);
				body();
				}
				}
				setState(189);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(190);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class On_init_start_funcContext extends ParserRuleContext {
		public TerminalNode VOID() { return getToken(UTLParser.VOID, 0); }
		public TerminalNode LPAR() { return getToken(UTLParser.LPAR, 0); }
		public TerminalNode TRADE() { return getToken(UTLParser.TRADE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(UTLParser.IDENTIFIER, 0); }
		public TerminalNode RPAR() { return getToken(UTLParser.RPAR, 0); }
		public TerminalNode LBRACE() { return getToken(UTLParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(UTLParser.RBRACE, 0); }
		public TerminalNode ON_INIT() { return getToken(UTLParser.ON_INIT, 0); }
		public TerminalNode ON_START() { return getToken(UTLParser.ON_START, 0); }
		public TerminalNode THROW() { return getToken(UTLParser.THROW, 0); }
		public TerminalNode EXCEPTION() { return getToken(UTLParser.EXCEPTION, 0); }
		public List<BodyContext> body() {
			return getRuleContexts(BodyContext.class);
		}
		public BodyContext body(int i) {
			return getRuleContext(BodyContext.class,i);
		}
		public On_init_start_funcContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_on_init_start_func; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).enterOn_init_start_func(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof UTLListener ) ((UTLListener)listener).exitOn_init_start_func(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof UTLVisitor ) return ((UTLVisitor<? extends T>)visitor).visitOn_init_start_func(this);
			else return visitor.visitChildren(this);
		}
	}

	public final On_init_start_funcContext on_init_start_func() throws RecognitionException {
		On_init_start_funcContext _localctx = new On_init_start_funcContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_on_init_start_func);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(192);
			match(VOID);
			setState(193);
			_la = _input.LA(1);
			if ( !(_la==ON_INIT || _la==ON_START) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(194);
			match(LPAR);
			setState(195);
			match(TRADE);
			setState(196);
			match(IDENTIFIER);
			setState(197);
			match(RPAR);
			setState(200);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==THROW) {
				{
				setState(198);
				match(THROW);
				setState(199);
				match(EXCEPTION);
				}
			}

			setState(202);
			match(LBRACE);
			setState(206);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 8998403592895424L) != 0) || ((((_la - 74)) & ~0x3f) == 0 && ((1L << (_la - 74)) & 65539L) != 0)) {
				{
				{
				setState(203);
				body();
				}
				}
				setState(208);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(209);
			match(RBRACE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
